--- a/templates/projet/show.html.twig
+++ b/templates/projet/show.html.twig
@@ -3,67 +3,110 @@
 {% block title %}Projet{% endblock %}
 
 {% block body %}
-<div class="container mt-5 mb-5">
-    <div class="row d-flex justify-content-center">
-        <div class="col-md-10">
-            <div class="card">
-                <div class="row">
-                    <div class="col-lg-6 order-3">
-                        <div class="images p-3">
-                            <div class="text-center p-4">
-                                {% set image = '/uploads/projets/projet.jpg' %}
-                                {% if projet.image is not empty %}
-                                    <img src="{{ asset('/uploads/projets/')~projet.image }}"
-                                         class="w-100"/>
-                                {% else %}
-                                    <img src="{{ asset(image) }}"
-                                         class="w-100"/>
+    {% set complet =  3 - projet.inscriptions.count == 0 %}
+    <div class="container mt-5 mb-5">
+        <div class="row d-flex justify-content-center">
+            <div class="col-md-10">
+                <div class="card">
+                    <div class="row">
+                        <div class="col-lg-6 order-3">
+                            <div class="images p-3">
+                                <div class="text-center p-4">
+                                    {% set image = '/uploads/projets/projet.jpg' %}
+                                    {% if projet.image is not empty %}
+                                        <img src="{{ asset('/uploads/projets/')~projet.image }}"
+                                             class="w-100"/>
+                                    {% else %}
+                                        <img src="{{ asset(image) }}"
+                                             class="w-100"/>
+                                    {% endif %}
+                                </div>
+                                <div class="px-4 pb-2" style="position: relative;">
+                                    <h4 class="mb-1 me-1">Equipe :</h4>
+                                    <div class="d-flex flex-column">
+                                        <ul>
+                                            {% for role, index in roles %}
+                                                {% set find = false %}
+                                                <li> {{ role }} :
+                                                    {% for inscription in projet.inscriptions %}
+                                                        {% if index == inscription.role %}
+                                                            {% set find = true %}
+                                                            {{ inscription.user }}
+                                                        {% endif %}
+                                                    {% endfor %}
+                                                    {% if find == false %}
+                                                        <span class="text-success">disponible</span>
+                                                    {% endif %}
+                                                </li>
+                                            {% endfor %}
+                                        </ul>
+                                        {% include 'projet/_rejoindre-button.html.twig' %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="px-2 order-4">
+                                {% if app.user and (projet.containUser(app.user) or projet.owner == app.user) %}
+                                    {% if complet %}
+                                        <h6>Contacts</h6>
+                                        <div class="row">
+                                            <dl class="col-6">
+                                                <dt>Responsable</dt>
+                                                <dd class="mb-0 small mx-sm-4">{{ projet.owner.nom|upper }} {{ projet.owner.prenom|capitalize }}</dd>
+                                                <dd class="mb-0 small mx-sm-4">{{ projet.owner.email }}</dd>
+                                                <dd class="mb-0 small mx-sm-4">{{ projet.owner.telephone }}</dd>
+                                            </dl>
+                                            {% for inscription in projet.inscriptions %}
+                                                <dl class="col-6">
+                                                    <dt>{{ inscription.rolelabel }}</dt>
+                                                    <dd class="mb-0 small mx-sm-4">{{ inscription.user.nom|upper }} {{ inscription.user.prenom|capitalize }}</dd>
+                                                    <dd class="mb-0 small mx-sm-4">{{ inscription.user.email }}</dd>
+                                                    <dd class="mb-0 small mx-sm-4">{{ inscription.user.telephone }}</dd>
+                                                </dl>
+                                            {% endfor %}
+                                        </div>
+                                    {% else %}
+                                        <div class="alert alert-info">Vous ne verez les contacts qu'une fois
+                                            l'équipe au complet.
+                                        </div>
+                                    {% endif %}
                                 {% endif %}
                             </div>
-                            <div class="p-4">
-                                <h4 class="mb-1 me-1">Equipe :</h4>
-                                <div class="d-flex flex-column">
-                                    <ul>
-                                        {% for inscription in projet.inscriptions %}
-                                            <li> {{ inscription.user }}</li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6 order-1">
-                        <div class="product p-4">
-                            <div class="d-flex justify-content-between align-items-center">
-                                <a class="anone" href="{{ path("projets") }}">
-                                    <div class="d-flex align-items-center"><i
-                                                class="bi bi-arrow-left-square me-2"></i>
-                                        <span
-                                                class="ml-1">Retour</span>
-                                    </div>
-                                </a>
-                                <i class="fa fa-shopping-cart text-muted"></i>
-                            </div>
-                            <div class="mt-4 mb-3">
-
-                                <h5 class="text-uppercase">{{ projet.titre }}</h5>
-                                <span class="text-muted brand">Responsable : {{ projet.owner }}</span>
-                                <div class="text-muted brand"> Compétences :
-                                    {% for skill in projet.skills %}
-                                        <span>{{ skill.tag }}</span>
-                                        {% if loop.last == false %}
-                                            <span class="text-primary"> • </span>
-                                        {% endif %}
-                                    {% endfor %}
+                        <div class="col-lg-6 order-1">
+                            <div class="product p-4">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <a class="anone" href="{{ path("projets") }}">
+                                        <div class="d-flex align-items-center"><i
+                                                    class="bi bi-arrow-left-square me-2"></i>
+                                            <span
+                                                    class="ml-1">Retour</span>
+                                        </div>
+                                    </a>
+                                    <i class="fa fa-shopping-cart text-muted"></i>
                                 </div>
+                                <div class="mt-4 mb-3">
+
+                                    <h5 class="text-uppercase">{{ projet.titre }}</h5>
+                                    <div><span class="text-muted brand">Responsable :</span> {{ projet.owner }}</div>
+                                    <div><span class="text-muted brand">Type :</span> {{ projet.typeLabel }}</div>
+                                    <div><span class="text-muted brand">Compétences :</span>
+                                        {% for skill in projet.skills %}
+                                            <span>{{ skill.tag }}</span>
+                                            {% if loop.last == false %}
+                                                <span class="text-primary"> • </span>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                                <p class="about">
+                                    {{ projet.description|raw }}
+                                </p>
                             </div>
-                            <p class="about">
-                                {{ projet.description|raw }}
-                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    {% endblock %}
+    {% include 'projet/_modal-rejoindre.html.twig' %}
+{% endblock %}
