--- a/templates/projet/show.html.twig
+++ b/templates/projet/show.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {% set complet =  3 - projet.inscriptions.count == 0 %}
-    <div class="container mt-5 mb-5">
+    <div class="container mb-5">
         <div class="row d-flex justify-content-center">
             <div class="col-md-10">
                 <div class="card">
