--- a/templates/projet/list.twig
+++ b/templates/projet/list.twig
@@ -12,7 +12,7 @@
                         un projet</a>
                 </div>
             {% endif %}
-            <div class="row justify-content-center mb-3">
+            <div class="mx-auto col-xl-10 justify-content-center mb-3">
                 <form action="" method="get">
                     <div class="input-group">
                         <input class="form-control border-end-0 border" type="search" name="q" placeholder="..."
