--- a/templates/projet/show.html.twig
+++ b/templates/projet/show.html.twig
@@ -10,8 +10,8 @@
                 <div class="card">
                     <div class="row">
                         <div class="col-lg-6 order-3">
-                            <div class="images p-3">
-                                <div class="text-center p-4">
+                            <div class="images p-lg-3">
+                                <div class="text-center p-lg-4">
                                     {% set image = '/uploads/projets/projet.jpg' %}
                                     {% if projet.image is not empty %}
                                         <img src="{{ asset('/uploads/projets/')~projet.image }}"
@@ -21,7 +21,7 @@
                                              class="w-100"/>
                                     {% endif %}
                                 </div>
-                                <div class="px-4 pb-2" style="position: relative;">
+                                <div class="px-4 py-2" style="position: relative;">
                                     <h4 class="mb-1 me-1">Equipe :</h4>
                                     <div class="d-flex flex-column">
                                         <ul>
@@ -84,8 +84,7 @@
                                     </a>
                                     <i class="fa fa-shopping-cart text-muted"></i>
                                 </div>
-                                <div class="mt-4 mb-3">
-
+                                <div class="mt-2 mb-3">
                                     <h5 class="text-uppercase">{{ projet.titre }}</h5>
                                     <div><span class="text-muted brand">Responsable :</span> {{ projet.owner }}</div>
                                     <div><span class="text-muted brand">Type :</span> {{ projet.typeLabel }}</div>
