--- a/templates/projet/_rejoindre-button.html.twig
+++ b/templates/projet/_rejoindre-button.html.twig
@@ -1,7 +1,6 @@
 {% if (app.user and projet.containUser(app.user) == false and app.user.isEtudiant) or app.user is empty %}
     <a href="#"
-       class="btn btn-outline-success btn-sm mt-2 rejoindre-projet"
-       style="position:absolute; bottom:15px; right: 15px"
+       class="btn btn-outline-success btn-sm align-self-end rejoindre-projet"
        data-projet-id="{{ projet.id }}"
        type="button">Rejoindre
     </a>
@@ -24,13 +23,13 @@
         </div>
     </div>
 {% elseif app.user.entrepreneur is defined and app.user.entrepreneur and projet.owner == app.user %}
-    <a style='position: absolute; bottom: 10px;right: 10px'
+    <a
        href="{{ path('app_projet_edit',{id:projet.id}) }}"
-       class="btn btn-sm btn-outline-warning">Editer</a>
+       class="btn btn-sm btn-outline-warning align-self-end">Editer</a>
     <form method="post" action="{{ path('app_projet_delete', {'id': projet.id}) }}"
           onsubmit="return confirm('Are you sure you want to delete this item?');">
         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ projet.id) }}">
-        <button style='position: absolute; bottom: 10px;right: 75px' class="btn btn-sm btn-outline-danger">Supprimer
+        <button class="btn btn-sm btn-outline-danger align-self-end">Supprimer
         </button>
     </form>
 {% else %}
