--- a/templates/projet/_rejoindre-button.html.twig
+++ b/templates/projet/_rejoindre-button.html.twig
@@ -25,7 +25,7 @@
 {% elseif app.user.entrepreneur is defined and app.user.entrepreneur and projet.owner == app.user %}
     <a
        href="{{ path('app_projet_edit',{id:projet.id}) }}"
-       class="btn btn-sm btn-outline-warning align-self-end">Editer</a>
+       class="btn btn-sm btn-outline-warning align-self-end mx-2">Editer</a>
     <form method="post" action="{{ path('app_projet_delete', {'id': projet.id}) }}"
           onsubmit="return confirm('Are you sure you want to delete this item?');">
         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ projet.id) }}">
