--- a/templates/projet/list.twig
+++ b/templates/projet/list.twig
@@ -98,7 +98,7 @@
                                         </div>
                                         <h6 class="text-success">Place(s) restante(s)
                                             : {{ 3 - projet.inscriptions.count }}</h6>
-                                        <div class="d-flex mt-4">
+                                        <div class="d-flex mt-4 justify-content-end">
                                             {% include 'projet/_rejoindre-button.html.twig' %}
                                         </div>
                                     </div>
