--- a/templates/projet/show.html.twig
+++ b/templates/projet/show.html.twig
@@ -69,7 +69,9 @@
                                         </div>
                                     {% endif %}
                                 {% endif %}
-                                {% include 'projet/_rejoindre-button.html.twig' %}
+                                <div class="py-2">
+                                    {% include 'projet/_rejoindre-button.html.twig' %}
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-6 order-1">
