--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -45,7 +45,7 @@
                                     {{ form_row(form.telephone) }}
                                 </div>
                             </div>
-                            <div class="col-lg-6">
+                            <div style='display: none;' class="col-lg-6">
                                 <div class="mb-3">
                                     {{ form_row(form.username) }}
                                 </div>
