--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -13,7 +13,7 @@
                         <a href="{{ path('projets') }}" class="nav-link">Projets</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">A propos</a>
+                        <a href="{{ path('cgu') }}" class="nav-link">CGU</a>
                     </li>
                     <li class="nav-item">
                         <a href="#" class="nav-link">Contact</a>
