--- a/templates/cgu.html.twig
+++ b/templates/cgu.html.twig
@@ -1,15 +1,13 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Titre de la home
+    Titres des CGU
 {% endblock %}
 
 {% block body %}
-
     <div class="container">
-        "Ici créer la page d'acceuil"
+        "Ici les CGU"
     </div>
-
 {% endblock %}
 
 
