--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,5 +1,6 @@
 <header class="mb-auto">
     <nav class="navbar navbar-expand-lg  navbar-light" role="navigation">
+        <a class="navbar-brand" href="#">TeamBrains</a>
         <div class="container">
             <a class="navbar-brand" href="../index.html"><img src="../assets/images/yoga/coach-yoga.svg" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
