--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -10,7 +10,7 @@
         <div class="jumbotron text-center">
             <h1 class="display-4">Collaborer & Entreprendre<br>TeamBrains</h1>
             <p class="lead">Le meilleur endroit pour démarrer vos projets et vous challengez</p>
-            <a href="#" class="btn btn-primary btn-lg blinking-btn">Inscrivez-vous dès maintenant</a>
+            <a href="https://teambrain.anime-sanctuary.net/register" class="btn btn-primary btn-lg blinking-btn">Inscrivez-vous dès maintenant</a>
         </div>
         <div class="row features">
             <div class="col-md-6 feature">
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="text-center mt-4">
-            <a href="#" class="btn btn-primary btn-lg blinking-btn">Découvrez nos projets</a>
+            <a href="https://teambrain.anime-sanctuary.net/projets/" class="btn btn-primary btn-lg blinking-btn">Découvrez nos projets</a>
         </div>
     </div>
 
